# multi-agent-lit-review

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  notebook.ipynb  notebook_executed.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml
data/raw/: .gitkeep
outputs/: .gitkeep
