[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "multi-agent-lit-review"
version = "1.0.0"
description = "Multi-agent workflow for biomedical literature retrieval, summarization, and verification"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["nlp", "biomedical", "rag", "pubmed", "transformers", "summarization"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
